<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.second">
    <Button
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"

        android:background="#0000"
        android:fontFamily="sans-serif-medium"
        android:text="@string/btn"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.897"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:scaleType="centerCrop"
        android:src="@drawable/g1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/Slide_1_logo_Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/acme"
        android:gravity="center_horizontal"
        android:text="@string/Slide_1_logo_Title"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="25dp"

        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Slide_2_heading"
        app:layout_constraintTop_toBottomOf="@+id/image"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/Slide_2_heading"
        android:layout_width="222dp"
        android:layout_height="36dp"
        android:layout_below="@id/Slide_1_logo_Title"
        android:layout_marginBottom="24dp"
        android:text="@string/Slide_2_heading"
        android:textAlignment="viewStart"
        android:textColor="@android:color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.359"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.536" />

    <TextView
        android:id="@+id/Slide_1_desc"
        android:layout_width="251dp"
        android:layout_height="117dp"

        android:fontFamily="@font/anton"
        android:text="@string/Slide_2_desc"
        android:textAlignment="viewStart"
        android:textColor="@android:color/black"
        android:textSize="14dp"

        app:layout_constraintBottom_toTopOf="@+id/btn1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.425"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Slide_2_heading"
        app:layout_constraintVertical_bias="0.107" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"

        android:background="#8Bc34a"
        android:fontFamily="sans-serif-medium"
        android:text="@string/btn1"
        android:textColor="@color/white"

        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>